--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 
         <activity
             android:name=".activity.ProjectCheActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_project_che">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,6 +69,12 @@
             </intent-filter>
 
         </activity>
+
+        <service
+            android:enabled="true"
+            android:name="mobile.che.com.oddymobstar.chemobile.service.CheService">
+        </service>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
