--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.+'
     compile 'com.android.support:recyclerview-v7:23.1.+'
+    compile 'org.json:json:20151123'
     compile files('libs/schema-1.0-SNAPSHOT.jar')
 }
