--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
+        maven { url  "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
     }
 }
