--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.+'
     compile 'com.android.support:recyclerview-v7:23.1.+'
     compile 'org.rajawali3d:rajawali:1.0.294-SNAPSHOT@aar'
     compile files('libs/schema-1.0-SNAPSHOT.jar')
+    compile 'com.android.support:appcompat-v7:23.0.0-alpha2'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
 }
